--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
   <nav class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-blue-600">ShopEase</h1>
     <div class="flex-1 px-6">
-      <input type="text" id="searchInput" placeholder="Search products..." 
+      <input type="text" id="searchInput" placeholder="Search products..."
              class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring focus:ring-blue-200">
     </div>
-    <button class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+    <button id="cartBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
       Cart (0)
     </button>
   </nav>
 
-  <!-- Hero Banner -->
-  <div class="bg-blue-600 text-white text-center py-16">
-    <h2 class="text-4xl font-bold mb-4">Welcome to ShopEase</h2>
-    <p class="text-lg">Find the best products at unbeatable prices</p>
-    <button class="mt-6 px-6 py-3 bg-white text-blue-600 font-semibold rounded-lg shadow hover:bg-gray-200">
-      Shop Now
-    </button>
+  <!-- Hero Slideshow -->
+  <div class="relative w-full h-96 overflow-hidden">
+    <div class="absolute inset-0 flex transition-transform duration-700" id="slider">
+      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?w=1200" class="w-full flex-shrink-0 object-cover">
+      <img src="https://images.unsplash.com/photo-1581291519195-ef11498d1cf5?w=1200" class="w-full flex-shrink-0 object-cover">
+      <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?w=1200" class="w-full flex-shrink-0 object-cover">
+      <img src="https://images.unsplash.com/photo-1542293787938-c9e299b880a6?w=1200" class="w-full flex-shrink-0 object-cover">
+    </div>
+    <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2" id="dots"></div>
   </div>
 
   <!-- Category Filters -->
@@ -35,7 +37,7 @@
     <div id="categoryButtons" class="flex flex-wrap gap-3"></div>
   </div>
 
-  <!-- All Products -->
+  <!-- Products -->
   <div class="max-w-7xl mx-auto p-6">
     <h2 class="text-xl font-semibold mb-6">All Products</h2>
     <div id="productsGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
@@ -46,7 +48,7 @@
     <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-6 text-center md:text-left">
       <div>
         <h4 class="font-semibold text-gray-800 mb-2">About ShopEase</h4>
-        <p class="text-gray-600 text-sm">ShopEase is your one-stop online store for electronics, fashion, and accessories. We deliver quality products at affordable prices.</p>
+        <p class="text-gray-600 text-sm">ShopEase is your one-stop online store for electronics, fashion, and accessories.</p>
       </div>
       <div>
         <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
@@ -70,15 +72,16 @@
 
   <!-- JavaScript -->
   <script>
+    // Products Data
     const products = [
-      {id: 1, name: "Smartphone", image: "https://dummyimage.com/400x400/000/fff&text=Smartphone", category: "Electronics", price: 45000, rating: 4},
-      {id: 2, name: "Headphones", image: "https://dummyimage.com/400x400/333/fff&text=Headphones", category: "Electronics", price: 5000, rating: 5},
-      {id: 3, name: "Smartwatch", image: "https://dummyimage.com/400x400/444/fff&text=Smartwatch", category: "Electronics", price: 12000, rating: 3},
-      {id: 4, name: "Laptop", image: "https://dummyimage.com/400x400/555/fff&text=Laptop", category: "Electronics", price: 85000, rating: 5},
-      {id: 5, name: "Shoes", image: "https://dummyimage.com/400x400/666/fff&text=Shoes", category: "Fashion", price: 3000, rating: 4},
-      {id: 6, name: "T-Shirt", image: "https://dummyimage.com/400x400/777/fff&text=T-Shirt", category: "Fashion", price: 1500, rating: 4},
-      {id: 7, name: "Backpack", image: "https://dummyimage.com/400x400/888/fff&text=Backpack", category: "Accessories", price: 2500, rating: 3},
-      {id: 8, name: "Watch", image: "https://dummyimage.com/400x400/999/fff&text=Watch", category: "Accessories", price: 4000, rating: 5},
+      {id: 1, name: "Smartphone", image: "https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?w=400", category: "Electronics", price: 45000, rating: 4},
+      {id: 2, name: "Headphones", image: "https://images.unsplash.com/photo-1518443895470-0881d56ab4b9?w=400", category: "Electronics", price: 5000, rating: 5},
+      {id: 3, name: "Smartwatch", image: "https://images.unsplash.com/photo-1516574187841-cb9cc2ca948b?w=400", category: "Electronics", price: 12000, rating: 3},
+      {id: 4, name: "Laptop", image: "https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=400", category: "Electronics", price: 85000, rating: 5},
+      {id: 5, name: "Shoes", image: "https://images.unsplash.com/photo-1528701800489-20be9c1c20fb?w=400", category: "Fashion", price: 3000, rating: 4},
+      {id: 6, name: "T-Shirt", image: "https://images.unsplash.com/photo-1520975918311-59c024d79a1c?w=400", category: "Fashion", price: 1500, rating: 4},
+      {id: 7, name: "Backpack", image: "https://images.unsplash.com/photo-1509099836639-18ba1795216d?w=400", category: "Accessories", price: 2500, rating: 3},
+      {id: 8, name: "Watch", image: "https://images.unsplash.com/photo-1518544385257-91e296f3e4f2?w=400", category: "Accessories", price: 4000, rating: 5},
     ];
 
     const productsGrid = document.getElementById("productsGrid");
@@ -114,7 +117,7 @@
           <div class="flex justify-center mt-2">
             ${[1,2,3,4,5].map(i => `<span class="${i <= product.rating ? 'text-yellow-400' : 'text-gray-300'}">★</span>`).join("")}
           </div>
-          <button class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+          <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
             Add to Cart
           </button>
         `;
@@ -139,9 +142,46 @@
     });
 
     document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("cartBtn").addEventListener("click", () => {
+      window.location.href = "cart.html";
+    });
 
     renderCategories();
     renderProducts();
+
+    // Slideshow
+    const slider = document.getElementById("slider");
+    const dots = document.getElementById("dots");
+    let index = 0;
+    const slides = slider.children;
+    const totalSlides = slides.length;
+
+    for (let i = 0; i < totalSlides; i++) {
+      const dot = document.createElement("span");
+      dot.className = "w-3 h-3 bg-white rounded-full opacity-50 cursor-pointer";
+      dot.addEventListener("click", () => goToSlide(i));
+      dots.appendChild(dot);
+    }
+
+    function goToSlide(i) {
+      index = i;
+      slider.style.transform = `translateX(-${100 * i}%)`;
+      updateDots();
+    }
+
+    function updateDots() {
+      [...dots.children].forEach((dot, i) => {
+        dot.className = `w-3 h-3 rounded-full cursor-pointer ${i === index ? 'bg-blue-600 opacity-100' : 'bg-white opacity-50'}`;
+      });
+    }
+
+    function nextSlide() {
+      index = (index + 1) % totalSlides;
+      goToSlide(index);
+    }
+
+    setInterval(nextSlide, 4000);
+    goToSlide(0);
   </script>
 
 </body>
