--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-commerce Store</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .slider {
+      display: flex;
+      transition: transform 0.7s ease-in-out;
+    }
+    .slide {
+      width: 100%;
+      flex-shrink: 0;
+    }
+  </style>
 </head>
 <body class="bg-gray-100">
 
@@ -12,176 +22,103 @@
   <nav class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-blue-600">ShopEase</h1>
     <div class="flex-1 px-6">
-      <input type="text" id="searchInput" placeholder="Search products..."
+      <input type="text" placeholder="Search products..." 
              class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring focus:ring-blue-200">
     </div>
-    <button id="cartBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+    <button onclick="window.location.href='cart.html'" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
       Cart (0)
     </button>
   </nav>
 
-  <!-- Hero Slideshow -->
-  <div class="relative w-full h-96 overflow-hidden">
-    <div class="absolute inset-0 flex transition-transform duration-700" id="slider">
-      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?w=1200" class="w-full flex-shrink-0 object-cover">
-      <img src="https://images.unsplash.com/photo-1581291519195-ef11498d1cf5?w=1200" class="w-full flex-shrink-0 object-cover">
-      <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?w=1200" class="w-full flex-shrink-0 object-cover">
-      <img src="https://images.unsplash.com/photo-1542293787938-c9e299b880a6?w=1200" class="w-full flex-shrink-0 object-cover">
-    </div>
-    <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2" id="dots"></div>
-  </div>
+  <!-- Hero Banner Slider -->
+  <div class="relative w-full overflow-hidden h-96">
+    <div id="slider" class="slider">
+      <!-- Clone last image for infinite loop -->
+      <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
 
-  <!-- Category Filters -->
-  <div class="max-w-7xl mx-auto px-6 mt-8">
-    <h3 class="text-xl font-semibold mb-4">Shop by Category</h3>
-    <div id="categoryButtons" class="flex flex-wrap gap-3"></div>
+      <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
+      <img src="https://picsum.photos/id/1016/1200/400" class="slide object-cover" alt="Banner 2">
+      <img src="https://picsum.photos/id/1018/1200/400" class="slide object-cover" alt="Banner 3">
+      <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
+
+      <!-- Clone first image for infinite loop -->
+      <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
+    </div>
   </div>
 
   <!-- Products -->
   <div class="max-w-7xl mx-auto p-6">
     <h2 class="text-xl font-semibold mb-6">All Products</h2>
-    <div id="productsGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
+    <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+      
+      <!-- Example Product -->
+      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
+        <a href="product.html">
+          <img src="https://picsum.photos/id/1011/400/300" alt="Smartphone" class="w-full h-56 object-contain">
+          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Smartphone</h3>
+        </a>
+        <p class="text-blue-600 font-bold mt-2">Rs 45,000</p>
+        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+          Add to Cart
+        </button>
+      </div>
+
+      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
+        <a href="product.html">
+          <img src="https://picsum.photos/id/1012/400/300" alt="Headphones" class="w-full h-56 object-contain">
+          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Headphones</h3>
+        </a>
+        <p class="text-blue-600 font-bold mt-2">Rs 5,000</p>
+        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+          Add to Cart
+        </button>
+      </div>
+
+      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
+        <a href="product.html">
+          <img src="https://picsum.photos/id/1019/400/300" alt="Smartwatch" class="w-full h-56 object-contain">
+          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Smartwatch</h3>
+        </a>
+        <p class="text-blue-600 font-bold mt-2">Rs 12,000</p>
+        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+          Add to Cart
+        </button>
+      </div>
+
+    </div>
   </div>
 
   <!-- Footer -->
   <footer class="bg-white shadow mt-10 py-8">
-    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-6 text-center md:text-left">
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">About ShopEase</h4>
-        <p class="text-gray-600 text-sm">ShopEase is your one-stop online store for electronics, fashion, and accessories.</p>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Quick Links</h4>
-        <ul class="text-gray-600 text-sm space-y-1">
-          <li><a href="#" class="hover:text-blue-600">Home</a></li>
-          <li><a href="#" class="hover:text-blue-600">Shop</a></li>
-          <li><a href="#" class="hover:text-blue-600">Contact</a></li>
-          <li><a href="#" class="hover:text-blue-600">About Us</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-2">Contact</h4>
-        <p class="text-gray-600 text-sm">Email: support@shopease.com</p>
-        <p class="text-gray-600 text-sm">Phone: +92 300 1234567</p>
-      </div>
-    </div>
-    <div class="text-center text-gray-600 text-sm mt-6">
-      &copy; <span id="year"></span> ShopEase. All rights reserved.
+    <div class="text-center text-gray-600 text-sm">
+      &copy; 2025 ShopEase. All rights reserved.
     </div>
   </footer>
 
-  <!-- JavaScript -->
+  <!-- Slider Script -->
   <script>
-    // Products Data
-    const products = [
-      {id: 1, name: "Smartphone", image: "https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?w=400", category: "Electronics", price: 45000, rating: 4},
-      {id: 2, name: "Headphones", image: "https://images.unsplash.com/photo-1518443895470-0881d56ab4b9?w=400", category: "Electronics", price: 5000, rating: 5},
-      {id: 3, name: "Smartwatch", image: "https://images.unsplash.com/photo-1516574187841-cb9cc2ca948b?w=400", category: "Electronics", price: 12000, rating: 3},
-      {id: 4, name: "Laptop", image: "https://images.unsplash.com/photo-1517336714731-489689fd1ca8?w=400", category: "Electronics", price: 85000, rating: 5},
-      {id: 5, name: "Shoes", image: "https://images.unsplash.com/photo-1528701800489-20be9c1c20fb?w=400", category: "Fashion", price: 3000, rating: 4},
-      {id: 6, name: "T-Shirt", image: "https://images.unsplash.com/photo-1520975918311-59c024d79a1c?w=400", category: "Fashion", price: 1500, rating: 4},
-      {id: 7, name: "Backpack", image: "https://images.unsplash.com/photo-1509099836639-18ba1795216d?w=400", category: "Accessories", price: 2500, rating: 3},
-      {id: 8, name: "Watch", image: "https://images.unsplash.com/photo-1518544385257-91e296f3e4f2?w=400", category: "Accessories", price: 4000, rating: 5},
-    ];
-
-    const productsGrid = document.getElementById("productsGrid");
-    const categoryButtons = document.getElementById("categoryButtons");
-    const searchInput = document.getElementById("searchInput");
-
-    function renderProducts(filterCategory = "All", searchQuery = "") {
-      productsGrid.innerHTML = "";
-      let filteredProducts = products;
-
-      if (filterCategory !== "All") {
-        filteredProducts = filteredProducts.filter(p => p.category === filterCategory);
-      }
-      if (searchQuery.trim() !== "") {
-        filteredProducts = filteredProducts.filter(p => 
-          p.name.toLowerCase().includes(searchQuery.toLowerCase())
-        );
-      }
-
-      filteredProducts.forEach(product => {
-        const card = document.createElement("div");
-        card.className = "bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center";
-
-        card.innerHTML = `
-          <a href="product.html?id=${product.id}" class="w-full h-56 flex items-center justify-center overflow-hidden">
-            <img src="${product.image}" alt="${product.name}" class="w-full h-full object-contain">
-          </a>
-          <a href="product.html?id=${product.id}">
-            <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">${product.name}</h3>
-          </a>
-          <p class="text-sm text-gray-500">${product.category}</p>
-          <p class="text-blue-600 font-bold mt-2">Rs ${product.price.toLocaleString()}</p>
-          <div class="flex justify-center mt-2">
-            ${[1,2,3,4,5].map(i => `<span class="${i <= product.rating ? 'text-yellow-400' : 'text-gray-300'}">★</span>`).join("")}
-          </div>
-          <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-            Add to Cart
-          </button>
-        `;
-        productsGrid.appendChild(card);
-      });
-    }
-
-    function renderCategories() {
-      const categories = ["All", ...new Set(products.map(p => p.category))];
-      categoryButtons.innerHTML = "";
-      categories.forEach(cat => {
-        const btn = document.createElement("button");
-        btn.className = "px-4 py-2 bg-gray-200 rounded-lg hover:bg-blue-600 hover:text-white";
-        btn.textContent = cat;
-        btn.addEventListener("click", () => renderProducts(cat, searchInput.value));
-        categoryButtons.appendChild(btn);
-      });
-    }
-
-    searchInput.addEventListener("input", () => {
-      renderProducts("All", searchInput.value);
-    });
-
-    document.getElementById("year").textContent = new Date().getFullYear();
-    document.getElementById("cartBtn").addEventListener("click", () => {
-      window.location.href = "cart.html";
-    });
-
-    renderCategories();
-    renderProducts();
-
-    // Slideshow
     const slider = document.getElementById("slider");
-    const dots = document.getElementById("dots");
-    let index = 0;
-    const slides = slider.children;
-    const totalSlides = slides.length;
+    const slides = document.querySelectorAll(".slide");
+    let index = 1; // start from first real slide
+    const slideWidth = 100;
 
-    for (let i = 0; i < totalSlides; i++) {
-      const dot = document.createElement("span");
-      dot.className = "w-3 h-3 bg-white rounded-full opacity-50 cursor-pointer";
-      dot.addEventListener("click", () => goToSlide(i));
-      dots.appendChild(dot);
+    slider.style.transform = `translateX(-${index * slideWidth}%)`;
+
+    function showSlide() {
+      index++;
+      slider.style.transition = "transform 0.7s ease-in-out";
+      slider.style.transform = `translateX(-${index * slideWidth}%)`;
+
+      if (index === slides.length - 1) {
+        setTimeout(() => {
+          slider.style.transition = "none";
+          index = 1;
+          slider.style.transform = `translateX(-${index * slideWidth}%)`;
+        }, 700);
+      }
     }
 
-    function goToSlide(i) {
-      index = i;
-      slider.style.transform = `translateX(-${100 * i}%)`;
-      updateDots();
-    }
-
-    function updateDots() {
-      [...dots.children].forEach((dot, i) => {
-        dot.className = `w-3 h-3 rounded-full cursor-pointer ${i === index ? 'bg-blue-600 opacity-100' : 'bg-white opacity-50'}`;
-      });
-    }
-
-    function nextSlide() {
-      index = (index + 1) % totalSlides;
-      goToSlide(index);
-    }
-
-    setInterval(nextSlide, 4000);
-    goToSlide(0);
+    setInterval(showSlide, 3000);
   </script>
 
 </body>
