--- a/index.html
+++ b/index.html
@@ -19,39 +19,92 @@
 <body class="bg-gray-100">
 
   <!-- Navbar -->
-  <nav class="bg-white shadow p-4 flex justify-between items-center">
+  <nav class="bg-white shadow p-4 flex justify-between items-center relative">
     <h1 class="text-2xl font-bold text-blue-600">ShopEase</h1>
-    <div class="flex-1 px-6">
-      <input type="text" placeholder="Search products..." 
-             class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:ring focus:ring-blue-200">
+
+    <!-- Links -->
+    <div class="hidden md:flex space-x-6">
+      <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+      <a href="shop.html" class="text-gray-700 hover:text-blue-600 font-medium">Shop</a>
+      <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About</a>
+      <a href="contact.html" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
+
+      <!-- Categories Dropdown -->
+      <div class="relative group">
+        <button class="font-medium text-gray-700 hover:text-blue-600 flex items-center">
+          Categories
+          <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg mt-0 top-full left-0 w-48 z-20">
+          <a href="smartphones.html" class="block px-4 py-2 hover:bg-gray-100">Smartphones</a>
+          <a href="laptops.html" class="block px-4 py-2 hover:bg-gray-100">Laptops</a>
+          <a href="headphones.html" class="block px-4 py-2 hover:bg-gray-100">Headphones</a>
+          <a href="smartwatches.html" class="block px-4 py-2 hover:bg-gray-100">Smartwatches</a>
+          <a href="accessories.html" class="block px-4 py-2 hover:bg-gray-100">Accessories</a>
+        </div>
+      </div>
     </div>
-    <button onclick="window.location.href='cart.html'" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-      Cart (0)
-    </button>
+
+    <!-- Search + Cart -->
+    <div class="flex items-center space-x-2">
+      <div class="hidden md:flex">
+        <input type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
+        <button class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
+          Search
+        </button>
+      </div>
+      <button onclick="window.location.href='cart.html'" class="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+        <!-- Professional Cart Icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5m1.6 8l-2 9m13-9l2 9M9 21a1 1 0 100-2 1 1 0 000 2zm8 0a1 1 0 100-2 1 1 0 000 2z" />
+        </svg>
+        Cart (0)
+      </button>
+    </div>
   </nav>
 
   <!-- Hero Banner Slider -->
   <div class="relative w-full overflow-hidden h-96">
     <div id="slider" class="slider">
-      <!-- Clone last image for infinite loop -->
       <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
-
       <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
       <img src="https://picsum.photos/id/1016/1200/400" class="slide object-cover" alt="Banner 2">
       <img src="https://picsum.photos/id/1018/1200/400" class="slide object-cover" alt="Banner 3">
       <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
-
-      <!-- Clone first image for infinite loop -->
       <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
     </div>
   </div>
 
-  <!-- Products -->
-  <div class="max-w-7xl mx-auto p-6">
-    <h2 class="text-xl font-semibold mb-6">All Products</h2>
+  <!-- Featured Categories -->
+  <section class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">Featured Categories</h2>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+      <a href="smartphones.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1011/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Smartphones</h3>
+      </a>
+      <a href="laptops.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1012/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Laptops</h3>
+      </a>
+      <a href="headphones.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1013/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Headphones</h3>
+      </a>
+      <a href="smartwatches.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1014/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Smartwatches</h3>
+      </a>
+    </div>
+  </section>
+
+  <!-- Best Selling Products -->
+  <section class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">Best Selling Products</h2>
     <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-      
-      <!-- Example Product -->
+      <!-- Product Card -->
       <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
         <a href="product.html">
           <img src="https://picsum.photos/id/1011/400/300" alt="Smartphone" class="w-full h-56 object-contain">
@@ -86,11 +139,64 @@
       </div>
 
     </div>
-  </div>
+  </section>
+
+  <!-- Newsletter -->
+  <section class="bg-blue-600 py-10 mt-10">
+    <div class="max-w-3xl mx-auto text-center text-white">
+      <h2 class="text-2xl font-bold mb-4">Stay Updated!</h2>
+      <p class="mb-6">Subscribe to our newsletter and get the latest deals and offers.</p>
+      <div class="flex justify-center">
+        <input type="email" placeholder="Enter your email" class="px-4 py-2 rounded-l-lg w-64 border-none focus:ring focus:ring-blue-300">
+        <button class="px-4 py-2 bg-gray-900 text-white rounded-r-lg hover:bg-gray-800">Subscribe</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">What Our Customers Say</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white shadow rounded-lg p-6 text-center">
+        <p class="text-gray-600">"Great quality products and fast delivery. Highly recommended!"</p>
+        <h4 class="mt-4 font-bold">- Ayesha</h4>
+      </div>
+      <div class="bg-white shadow rounded-lg p-6 text-center">
+        <p class="text-gray-600">"Customer service is excellent, and I love the discounts."</p>
+        <h4 class="mt-4 font-bold">- Ahmed</h4>
+      </div>
+      <div class="bg-white shadow rounded-lg p-6 text-center">
+        <p class="text-gray-600">"Wide variety of products, all genuine and affordable."</p>
+        <h4 class="mt-4 font-bold">- Sara</h4>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-white shadow mt-10 py-8">
-    <div class="text-center text-gray-600 text-sm">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-6 text-center md:text-left text-gray-600">
+      <div>
+        <h3 class="font-bold mb-2">ShopEase</h3>
+        <p>Your one-stop online store for all electronics.</p>
+      </div>
+      <div>
+        <h3 class="font-bold mb-2">Quick Links</h3>
+        <ul>
+          <li><a href="shop.html" class="hover:text-blue-600">Shop</a></li>
+          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold mb-2">Follow Us</h3>
+        <div class="flex justify-center md:justify-start space-x-4">
+          <a href="#" class="hover:text-blue-600">Facebook</a>
+          <a href="#" class="hover:text-blue-600">Instagram</a>
+          <a href="#" class="hover:text-blue-600">Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="text-center text-gray-500 text-sm mt-6">
       &copy; 2025 ShopEase. All rights reserved.
     </div>
   </footer>
@@ -99,7 +205,7 @@
   <script>
     const slider = document.getElementById("slider");
     const slides = document.querySelectorAll(".slide");
-    let index = 1; // start from first real slide
+    let index = 1;
     const slideWidth = 100;
 
     slider.style.transform = `translateX(-${index * slideWidth}%)`;
