--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
     <!-- Search + Cart -->
     <div class="flex items-center space-x-2">
       <div class="hidden md:flex">
-        <input type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
-        <button class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
+        <input id="searchInput" type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
+        <button id="searchBtn" class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
           Search
         </button>
       </div>
